--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Головна</title>
   </head>
   <body>
     <!-- Верхній колонтитул -->
     <header>
       <!-- LOGO -->
-      <a href="https://polrmn.github.io/goit-markup-hw-01/">WebStudio</a>
+      <a href="https://polrmn.github.io/goit-markup-hw-02/">WebStudio</a>
       <!-- NAVIGATION -->
       <nav>
         <ul>
