--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="https://polrmn.github.io/goit-markup-hw-01/">Студія</a> 
           </li>
           <li>
-            <a href="https://polrmn.github.io/goit-markup-hw-01/">Портфоліо</a>  
+            <a href="https://polrmn.github.io/goit-markup-hw-01/portfolio.html">Портфоліо</a>  
           </li>
           <li>
             <a href="https://polrmn.github.io/goit-markup-hw-01/">Контакти</a>
