--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <!-- Верхній колонтитул -->
     <header>
       <!-- LOGO -->
-      <a href="https://polrmn.github.io/goit-markup-hw-02/">WebStudio</a>
+      <a href="index.html">WebStudio</a>
       <!-- NAVIGATION -->
       <nav>
         <ul>
           <li>
-            <a href="https://polrmn.github.io/goit-markup-hw-02/">Студія</a> 
+            <a href="index.html">Студія</a> 
           </li>
           <li>
-            <a href="https://polrmn.github.io/goit-markup-hw-01/portfolio.html">Портфоліо</a>  
+            <a href="potrfolio.html">Портфоліо</a>  
           </li>
           <li>
-            <a href="https://polrmn.github.io/goit-markup-hw-02/">Контакти</a>
+            <a href="index.html">Контакти</a>
           </li>
         </ul>
       </nav>
