--- a/potrfolio.html
+++ b/potrfolio.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Портфоліо</title>
 </head>
 <body>
-   <!-- Верхній колонтитул -->
+   
+    <!-- Верхній колонтитул -->
    <header>
     <!-- LOGO -->
     <a href="index.html">WebStudio</a>
@@ -35,5 +37,98 @@
       </li>
     </ul>
   </header>
+
+  <main>
+    
+    <!-- Фільтр -->
+    <ul>
+        <li>
+            <button type="button">Усі</button>
+        </li>
+        <li>
+            <button type="button">Веб-сайти</button>
+        </li>
+        <li>
+            <button type="button">Додатки</button>
+        </li>
+        <li>
+            <button type="button">Дизайн</button>
+        </li>
+        <li>
+            <button type="button">Маркетинг</button>
+        </li>
+    </ul>
+
+    <!-- Проекти -->
+    <ul>
+        <li>
+            <img src="images/img8.jpg" alt="Ноутбук, на якому відображено веб-сайт" width="370">
+            <h3>Технокряк</h3>
+            <p>Веб-сайт</p>
+        </li>
+        <li>
+            <img src="images/img9.jpg" alt="Два професійних баскетболісти ведуть бородьбу" width="370">
+            <h3>Постер New Orlean vs Golden Star</h3>
+            <p>Дизайн</p>
+        </li>
+        <li>
+            <img src="images/img10.jpg" alt="Логотип ресторану на фоні фігури риби" width="370">
+            <h3>Ресторан Seafood</h3>
+            <p>Додаток</p>
+        </li>
+        <li>
+            <img src="images/img11.jpg" alt="Чонрі накладні бездротові навушники" width="370">
+            <h3>Проєкт Prime</h3>
+            <p>Маркетинг</p>
+        </li>
+        <li>
+            <img src="images/img12.jpg" alt="Два ящики білого і рудого кольору різних розмірів" width="370">
+            <h3>Проєкт Boxes</h3>
+            <p>Додаток</p>
+        </li>
+        <li>
+            <img src="images/img13.jpg" alt="Монітор, на якому відображено веб-сайт" width="370">
+            <h3>Inspiration has no Borders</h3>
+            <p>Веб-сайт</p>
+        </li>
+        <li>
+            <img src="images/img14.jpg" alt="Розгорнута книга" width="370">
+            <h3>Видання Limited Edition</h3>
+            <p>Дизайн</p>
+        </li>
+        <li>
+            <img src="images/img15.jpg" alt="Підвісний ярлик на якому зображено логотип" width="370">
+            <h3>Проєкт LAB</h3>
+            <p>Маркетинг</p>
+        </li>
+        <li>
+            <img src="images/img16.jpg" alt="Людина користується додатком з ноубука" width="370">
+            <h3>Growing Business</h3>
+            <p>Додаток</p>
+        </li>
+    </ul>
+  </main>
+
+   <!-- Нижній колонтитул -->
+   <footer>
+    <!-- LOGO -->
+    <a href="https://polrmn.github.io/goit-markup-hw-01/">WebStudio</a>
+    <address>
+      <ul>
+        <li>
+          <a href="https://www.google.com.ua/maps/@50.4267959,30.5388469,18.92z?hl=ru" 
+          target="_blank"
+          rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26
+          </a>
+        </li>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </address>
+  </footer>
 </body>
 </html>
