Глобальні стилі + стилізація Header

--- a/index.html
+++ b/index.html
@@ -5,34 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>Головна</title>
   </head>
   <body>
     <!-- Верхній колонтитул -->
     <header>
       <!-- LOGO -->
-      <a href="index.html">WebStudio</a>
+      <a class="logo" href="index.html"><span class="web-word">Web</span>Studio</a>
       <!-- NAVIGATION -->
       <nav>
-        <ul>
+        <ul class="navigation">
           <li>
             <a href="index.html">Студія</a> 
           </li>
-          <li>
+          <li class="portfolio-link">
             <a href="potrfolio.html">Портфоліо</a>  
           </li>
-          <li>
+          <li class="contacts-link">
             <a href="index.html">Контакти</a>
           </li>
         </ul>
       </nav>
       <!-- CONTACTS -->
-      <ul>
+      <ul class="contacts">
         <li>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="phone-number" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
