styling main page

--- a/potrfolio.html
+++ b/potrfolio.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>Портфоліо</title>
 </head>
@@ -15,18 +13,18 @@
      <!-- Верхній колонтитул -->
      <header>
         <!-- LOGO -->
-        <a class="logo" href="index.html"><span class="web-word">Web</span>Studio</a>
+        <a class="logo" href="https://polrmn.github.io/goit-markup-hw-02/"><span class="web-word">Web</span>Studio</a>
         <!-- NAVIGATION -->
         <nav>
           <ul class="navigation">
             <li>
-              <a href="index.html">Студія</a> 
+              <a href="https://polrmn.github.io/goit-markup-hw-02/">Студія</a> 
             </li>
             <li class="portfolio-link">
               <a href="potrfolio.html">Портфоліо</a>  
             </li>
             <li class="contacts-link">
-              <a href="index.html">Контакти</a>
+              <a href="https://polrmn.github.io/goit-markup-hw-02/">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -115,20 +113,20 @@
    <!-- Нижній колонтитул -->
    <footer>
     <!-- LOGO -->
-    <a href="https://polrmn.github.io/goit-markup-hw-01/">WebStudio</a>
+    <a class="logo-footer" href="https://polrmn.github.io/goit-markup-hw-02/"><span class="web-word">Web</span>Studio</a>
     <address>
-      <ul>
-        <li>
-          <a href="https://www.google.com.ua/maps/@50.4267959,30.5388469,18.92z?hl=ru" 
+      <ul class="address-list">
+        <li class="address-item">
+          <a class="map" href="https://www.google.com.ua/maps/@50.4267959,30.5388469,18.92z?hl=ru" 
           target="_blank"
           rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26
           </a>
         </li>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <li class="address-item">
+          <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <li class="address-item">
+          <a class="tel" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </address>
