--- a/potrfolio.html
+++ b/potrfolio.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>Портфоліо</title>
 </head>
-<body>
+<body class="portfolio-body">
    
      <!-- Верхній колонтитул -->
      <header>
@@ -39,24 +39,24 @@
         </ul>
       </header>
 
-  <main>
+  <main class="portfolio-main">
     
     <!-- Фільтр -->
-    <ul>
-        <li>
-            <button type="button">Усі</button>
+    <ul class="filter-list">
+        <li class="filter-item">
+            <button class="filter" type="button">Усі</button>
         </li>
-        <li>
-            <button type="button">Веб-сайти</button>
+        <li class="filter-item">
+            <button class="filter" type="button">Веб-сайти</button>
         </li>
-        <li>
-            <button type="button">Додатки</button>
+        <li class="filter-item">
+            <button class="filter" type="button">Додатки</button>
         </li>
-        <li>
-            <button type="button">Дизайн</button>
+        <li class="filter-item">
+            <button class="filter" type="button">Дизайн</button>
         </li>
-        <li>
-            <button type="button">Маркетинг</button>
+        <li class="filter-item">
+            <button class="filter" type="button">Маркетинг</button>
         </li>
     </ul>
 
