--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <!-- Верхній колонтитул -->
     <header>
       <!-- LOGO -->
-      <a class="logo" href="https://polrmn.github.io/goit-markup-hw-02/"><span class="web-word">Web</span>Studio</a>
+      <a class="logo" href="index.html"><span class="web-word">Web</span>Studio</a>
       <!-- NAVIGATION -->
       <nav>
         <ul class="navigation">
           <li>
-            <a href="https://polrmn.github.io/goit-markup-hw-02/">Студія</a> 
+            <a href="index.html">Студія</a> 
           </li>
           <li class="portfolio-link">
             <a href="potrfolio.html">Портфоліо</a>  
           </li>
           <li class="contacts-link">
-            <a href="https://polrmn.github.io/goit-markup-hw-02/">Контакти</a>
+            <a href="index.html">Контакти</a>
           </li>
         </ul>
       </nav>
@@ -158,7 +158,7 @@
     <!-- Нижній колонтитул -->
     <footer>
       <!-- LOGO -->
-      <a class="logo-footer" href="https://polrmn.github.io/goit-markup-hw-02/"><span class="web-word">Web</span>Studio</a>
+      <a class="logo-footer" href="index.html"><span class="web-word">Web</span>Studio</a>
       <address>
         <ul class="address-list">
           <li class="address-item">
