--- a/potrfolio.html
+++ b/potrfolio.html
@@ -13,18 +13,18 @@
      <!-- Верхній колонтитул -->
      <header>
         <!-- LOGO -->
-        <a class="logo" href="https://polrmn.github.io/goit-markup-hw-02/"><span class="web-word">Web</span>Studio</a>
+        <a class="logo" href="index.html"><span class="web-word">Web</span>Studio</a>
         <!-- NAVIGATION -->
         <nav>
           <ul class="navigation">
             <li>
-              <a href="https://polrmn.github.io/goit-markup-hw-02/">Студія</a> 
+              <a href="index.html">Студія</a> 
             </li>
             <li class="portfolio-link">
               <a href="potrfolio.html">Портфоліо</a>  
             </li>
             <li class="contacts-link">
-              <a href="https://polrmn.github.io/goit-markup-hw-02/">Контакти</a>
+              <a href="index.html">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -61,51 +61,51 @@
     </ul>
 
     <!-- Проекти -->
-    <ul>
-        <li>
+    <ul class="projects">
+        <li class="project-item">
             <img src="images/img8.jpg" alt="Ноутбук, на якому відображено веб-сайт" width="370">
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+            <h3 class="project-name">Технокряк</h3>
+            <p class="project-type">Веб-сайт</p>
         </li>
-        <li>
+        <li class="project-item">
             <img src="images/img9.jpg" alt="Два професійних баскетболісти ведуть бородьбу" width="370">
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+            <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
+            <p class="project-type">Дизайн</p>
         </li>
-        <li>
+        <li class="project-item">
             <img src="images/img10.jpg" alt="Логотип ресторану на фоні фігури риби" width="370">
-            <h3>Ресторан Seafood</h3>
-            <p>Додаток</p>
+            <h3 class="project-name">Ресторан Seafood</h3>
+            <p class="project-type">Додаток</p>
         </li>
-        <li>
+        <li class="project-item">
             <img src="images/img11.jpg" alt="Чонрі накладні бездротові навушники" width="370">
-            <h3>Проєкт Prime</h3>
-            <p>Маркетинг</p>
+            <h3 class="project-name">Проєкт Prime</h3>
+            <p class="project-type">Маркетинг</p>
         </li>
-        <li>
+        <li class="project-item">
             <img src="images/img12.jpg" alt="Два ящики білого і рудого кольору різних розмірів" width="370">
-            <h3>Проєкт Boxes</h3>
-            <p>Додаток</p>
+            <h3 class="project-name">Проєкт Boxes</h3>
+            <p class="project-type">Додаток</p>
         </li>
-        <li>
+        <li class="project-item">
             <img src="images/img13.jpg" alt="Монітор, на якому відображено веб-сайт" width="370">
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <h3 class="project-name">Inspiration has no Borders</h3>
+            <p class="project-type">Веб-сайт</p>
         </li>
-        <li>
+        <li class="project-item">
             <img src="images/img14.jpg" alt="Розгорнута книга" width="370">
-            <h3>Видання Limited Edition</h3>
-            <p>Дизайн</p>
+            <h3 class="project-name">Видання Limited Edition</h3>
+            <p class="project-type">Дизайн</p>
         </li>
-        <li>
+        <li class="project-item">
             <img src="images/img15.jpg" alt="Підвісний ярлик на якому зображено логотип" width="370">
-            <h3>Проєкт LAB</h3>
-            <p>Маркетинг</p>
+            <h3 class="project-name">Проєкт LAB</h3>
+            <p class="project-type">Маркетинг</p>
         </li>
-        <li>
+        <li class="project-item">
             <img src="images/img16.jpg" alt="Людина користується додатком з ноубука" width="370">
-            <h3>Growing Business</h3>
-            <p>Додаток</p>
+            <h3 class="project-name">Growing Business</h3>
+            <p class="project-type">Додаток</p>
         </li>
     </ul>
   </main>
@@ -113,7 +113,7 @@
    <!-- Нижній колонтитул -->
    <footer>
     <!-- LOGO -->
-    <a class="logo-footer" href="https://polrmn.github.io/goit-markup-hw-02/"><span class="web-word">Web</span>Studio</a>
+    <a class="logo-footer" href="index.html"><span class="web-word">Web</span>Studio</a>
     <address>
       <ul class="address-list">
         <li class="address-item">
