--- a/potrfolio.html
+++ b/potrfolio.html
@@ -17,97 +17,101 @@
         <!-- NAVIGATION -->
         <nav>
           <ul class="navigation">
-            <li>
-              <a href="index.html">Студія</a> 
+            <li class="studio-link">
+              <a class="studio" href="index.html">Студія</a> 
             </li>
             <li class="portfolio-link">
-              <a href="potrfolio.html">Портфоліо</a>  
+              <a class="portfolio" href="potrfolio.html">Портфоліо</a>  
             </li>
             <li class="contacts-link">
-              <a href="index.html">Контакти</a>
+              <a class="contact" href="index.html">Контакти</a>
             </li>
           </ul>
         </nav>
         <!-- CONTACTS -->
         <ul class="contacts">
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <li class="mail-link">
+            <a class="mail-top" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
-            <a class="phone-number" href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="tel-link">
+            <a class="tel-top" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
-        </ul>
+        </ul> 
       </header>
 
   <main class="portfolio-main">
     
-    <!-- Фільтр -->
-    <ul class="filter-list">
-        <li class="filter-item">
-            <button class="filter" type="button">Усі</button>
-        </li>
-        <li class="filter-item">
-            <button class="filter" type="button">Веб-сайти</button>
-        </li>
-        <li class="filter-item">
-            <button class="filter" type="button">Додатки</button>
-        </li>
-        <li class="filter-item">
-            <button class="filter" type="button">Дизайн</button>
-        </li>
-        <li class="filter-item">
-            <button class="filter" type="button">Маркетинг</button>
-        </li>
-    </ul>
+    
+    <Section>
+      <h1 class="blank"></h1>
+      <!-- Фільтр -->
+      <ul class="filter-list">
+          <li class="filter-item">
+              <button class="filter" type="button">Усі</button>
+          </li>
+          <li class="filter-item">
+              <button class="filter" type="button">Веб-сайти</button>
+          </li>
+          <li class="filter-item">
+              <button class="filter" type="button">Додатки</button>
+          </li>
+          <li class="filter-item">
+              <button class="filter" type="button">Дизайн</button>
+          </li>
+          <li class="filter-item">
+              <button class="filter" type="button">Маркетинг</button>
+          </li>
+      </ul>
 
-    <!-- Проекти -->
-    <ul class="projects">
-        <li class="project-item">
-            <img src="images/img8.jpg" alt="Ноутбук, на якому відображено веб-сайт" width="370">
-            <h3 class="project-name">Технокряк</h3>
-            <p class="project-type">Веб-сайт</p>
-        </li>
-        <li class="project-item">
-            <img src="images/img9.jpg" alt="Два професійних баскетболісти ведуть бородьбу" width="370">
-            <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
-            <p class="project-type">Дизайн</p>
-        </li>
-        <li class="project-item">
-            <img src="images/img10.jpg" alt="Логотип ресторану на фоні фігури риби" width="370">
-            <h3 class="project-name">Ресторан Seafood</h3>
-            <p class="project-type">Додаток</p>
-        </li>
-        <li class="project-item">
-            <img src="images/img11.jpg" alt="Чонрі накладні бездротові навушники" width="370">
-            <h3 class="project-name">Проєкт Prime</h3>
-            <p class="project-type">Маркетинг</p>
-        </li>
-        <li class="project-item">
-            <img src="images/img12.jpg" alt="Два ящики білого і рудого кольору різних розмірів" width="370">
-            <h3 class="project-name">Проєкт Boxes</h3>
-            <p class="project-type">Додаток</p>
-        </li>
-        <li class="project-item">
-            <img src="images/img13.jpg" alt="Монітор, на якому відображено веб-сайт" width="370">
-            <h3 class="project-name">Inspiration has no Borders</h3>
-            <p class="project-type">Веб-сайт</p>
-        </li>
-        <li class="project-item">
-            <img src="images/img14.jpg" alt="Розгорнута книга" width="370">
-            <h3 class="project-name">Видання Limited Edition</h3>
-            <p class="project-type">Дизайн</p>
-        </li>
-        <li class="project-item">
-            <img src="images/img15.jpg" alt="Підвісний ярлик на якому зображено логотип" width="370">
-            <h3 class="project-name">Проєкт LAB</h3>
-            <p class="project-type">Маркетинг</p>
-        </li>
-        <li class="project-item">
-            <img src="images/img16.jpg" alt="Людина користується додатком з ноубука" width="370">
-            <h3 class="project-name">Growing Business</h3>
-            <p class="project-type">Додаток</p>
-        </li>
-    </ul>
+      <!-- Проекти -->
+      <ul class="projects">
+          <li class="project-item">
+              <img src="images/img8.jpg" alt="Ноутбук, на якому відображено веб-сайт" width="370">
+              <h2 class="project-name">Технокряк</h2>
+              <p class="project-type">Веб-сайт</p>
+          </li>
+          <li class="project-item">
+              <img src="images/img9.jpg" alt="Два професійних баскетболісти ведуть бородьбу" width="370">
+              <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
+              <p class="project-type">Дизайн</p>
+          </li>
+          <li class="project-item">
+              <img src="images/img10.jpg" alt="Логотип ресторану на фоні фігури риби" width="370">
+              <h2 class="project-name">Ресторан Seafood</h2>
+              <p class="project-type">Додаток</p>
+          </li>
+          <li class="project-item">
+              <img src="images/img11.jpg" alt="Чонрі накладні бездротові навушники" width="370">
+              <h2 class="project-name">Проєкт Prime</h2>
+              <p class="project-type">Маркетинг</p>
+          </li>
+          <li class="project-item">
+              <img src="images/img12.jpg" alt="Два ящики білого і рудого кольору різних розмірів" width="370">
+              <h2 class="project-name">Проєкт Boxes</h2>
+              <p class="project-type">Додаток</p>
+          </li>
+          <li class="project-item">
+              <img src="images/img13.jpg" alt="Монітор, на якому відображено веб-сайт" width="370">
+              <h2 class="project-name">Inspiration has no Borders</h2>
+              <p class="project-type">Веб-сайт</p>
+          </li>
+          <li class="project-item">
+              <img src="images/img14.jpg" alt="Розгорнута книга" width="370">
+              <h2 class="project-name">Видання Limited Edition</h2>
+              <p class="project-type">Дизайн</p>
+          </li>
+          <li class="project-item">
+              <img src="images/img15.jpg" alt="Підвісний ярлик на якому зображено логотип" width="370">
+              <h2 class="project-name">Проєкт LAB</h2>
+              <p class="project-type">Маркетинг</p>
+          </li>
+          <li class="project-item">
+              <img src="images/img16.jpg" alt="Людина користується додатком з ноубука" width="370">
+              <h2 class="project-name">Growing Business</h2>
+              <p class="project-type">Додаток</p>
+          </li>
+      </ul>
+    </Section>
   </main>
 
    <!-- Нижній колонтитул -->
