--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav>
         <ul class="navigation">
           <li class="studio-link">
-            <a class="studio" href="index.html">Студія</a> 
+            <a class="studio current" href="index.html">Студія</a> 
           </li>
           <li class="portfolio-link">
             <a class="portfolio" href="potrfolio.html">Портфоліо</a>  
