--- a/potrfolio.html
+++ b/potrfolio.html
@@ -21,7 +21,7 @@
               <a class="studio" href="index.html">Студія</a> 
             </li>
             <li class="portfolio-link">
-              <a class="portfolio" href="potrfolio.html">Портфоліо</a>  
+              <a class="portfolio current" href="potrfolio.html">Портфоліо</a>  
             </li>
             <li class="contacts-link">
               <a class="contact" href="index.html">Контакти</a>
