--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
      <!-- Верхній колонтитул -->
-     <header>
+     <header class="header">
       <!-- LOGO -->
       <a class="logo" href="index.html"><span class="web-word">Web</span>Studio</a>
       <!-- NAVIGATION -->
@@ -42,7 +42,7 @@
     <main>
       <!-- Шапка -->
       <section class="button-field">
-        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <h1 class="button-discription">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="order-button">Замовити послугу</button>
       </section>
 
@@ -83,7 +83,7 @@
 
       <!-- Чим ми займаємося -->
       <section class="work">
-        <h2>Чим ми займаємося</h2>
+        <h2 class="work-head">Чим ми займаємося</h2>
         <ul class="work-images">
           <li class="work-item">
             <img
@@ -111,7 +111,7 @@
 
       <!-- Наша команда -->
       <section class="team">
-        <h2>Наша команда</h2>
+        <h2 class="team-head">Наша команда</h2>
         <ul class="team-members">
           <li class="member">
             <img
@@ -157,7 +157,7 @@
     </main>
 
   <!-- Нижній колонтитул -->
-  <footer>
+  <footer class="footer">
     <!-- LOGO -->
     <a class="logo-footer" href="index.html"><span class="web-word">Web</span>Studio</a>
     <address>
