--- a/potrfolio.html
+++ b/potrfolio.html
@@ -11,7 +11,7 @@
 <body class="portfolio-body">
    
      <!-- Верхній колонтитул -->
-     <header>
+     <header class="header">
         <!-- LOGO -->
         <a class="logo" href="index.html"><span class="web-word">Web</span>Studio</a>
         <!-- NAVIGATION -->
@@ -43,7 +43,7 @@
     
     
     <Section>
-      <h1 class="blank"></h1>
+      <h1 class="blank">Заголовок</h1>
       <!-- Фільтр -->
       <ul class="filter-list">
           <li class="filter-item">
@@ -115,7 +115,7 @@
   </main>
 
    <!-- Нижній колонтитул -->
-   <footer>
+   <footer class="footer">
     <!-- LOGO -->
     <a class="logo-footer" href="index.html"><span class="web-word">Web</span>Studio</a>
     <address>
