--- a/potrfolio.html
+++ b/potrfolio.html
@@ -24,7 +24,7 @@
               <a class="portfolio current" href="potrfolio.html">Портфоліо</a>  
             </li>
             <li class="contacts-link">
-              <a class="contact" href="index.html">Контакти</a>
+              <a class="contact" href="#">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -42,7 +42,7 @@
   <main class="portfolio-main">
     
     
-    <Section>
+    <section>
       <h1 class="blank">Заголовок</h1>
       <!-- Фільтр -->
       <ul class="filter-list">
@@ -111,7 +111,7 @@
               <p class="project-type">Додаток</p>
           </li>
       </ul>
-    </Section>
+    </section>
   </main>
 
    <!-- Нижній колонтитул -->
