--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a class="portfolio" href="potrfolio.html">Портфоліо</a>  
           </li>
           <li class="contacts-link">
-            <a class="contact" href="index.html">Контакти</a>
+            <a class="contact" href="#">Контакти</a>
           </li>
         </ul>
       </nav>
